# opti_radar

./: Cargo.toml  PAPER.md  README.md  charts.py
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: data_generator.rs  lib.rs  main.rs  target_processor.rs
tests/: accuracy.rs  integration_test.rs  intergration_test.rs
