[package]
name = "opti-radar"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
nalgebra = "0.32.3"

[dev-dependencies]
criterion = "0.4"

[lib]
name = "opti_radar"
path = "src/lib.rs"

[[bin]]
name = "opti_radar_main"
path = "src/main.rs"

[[test]]
name = "accuracy"
path = "tests/accuracy.rs"

[[bench]]
name = "benchmark"
harness = false
